<resources>
    <string name="app_name">HOMEPASS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="select_role">Select Role</string>
    <string name="click_on_image_to_select_from_gallery">Click on image to select from gallery</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="search_place">Search place..</string>
    <string name="switch_role">Switch Role</string>
    <string name="home">Home</string>
    <string name="your_messages">Your Messages</string>
    <string name="malibu_image">malibu image</string>
    <string name="cost_per">Cost per Person: </string>
    <string name="rating">Rating:</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="type_a_message">Type a message..</string>
    <string name="send">Send</string>
    <string name="be_a_host">Be a host?</string>
    <string name="image_place">Image place</string>
    <string name="hompass_logo">HomePass Logo</string>
    <string name="click_here_to_become_a_host">Click here to become a Host</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="username_ask">Username:</string>
    <string name="name_ask">Name:</string>
    <string name="surname_ask">Surname:</string>
    <string name="main_fields">Main fields</string>
    <string name="secondary_fields">Secondary fields</string>
    <string name="email_ask">Email:</string>
    <string name="phone_ask">Phone:</string>
    <string name="google_maps_api_key">AIzaSyAASOp4dNDXWgirwg8gcAwqTzJ7dGHyJC8</string>
    <string name="address_ask">Address:</string>
    <string name="availability">Availabilities</string>
    <string name="set_the_date_ranges_that_the_house_is_available">Set the date ranges that the house is available.</string>
    <string name="open_calendar">Open Calendar</string>
    <string name="pick_date_range">Pick date range:</string>
    <string name="period_ask">Available Period:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_new_date_range">Add new date range:</string>
    <string name="add">ADD</string>
    <string name="empty_date">----/--/--</string>
    <string name="max_guests_ask">Max Guests:</string>
    <string name="min_cost">Min Cost:</string>
    <string name="cost_per_person_ask">Cost per Person:</string>
    <string name="number_of_beds_ask">Number of Beds:</string>
    <string name="number_of_baths_ask">Number of Baths:</string>
    <string name="number_of_bedrooms_ask">Number of Bedrooms:</string>
    <string name="area_m2_ask">Area (m2):</string>
    <string name="images">Images</string>
    <string name="main_image">Main image</string>
    <string name="upload_multiple_images">Select multiple images from Gallery</string>
    <string name="_0_images_have_been_uploaded">0 images have been added</string>
    <string name="select_images">Select Images</string>
    <string name="type_of_place">Type of Place</string>
    <string name="house">House</string>
    <string name="room">Room</string>
    <string name="main_image_of_the_house">Main image of the house</string>
    <string name="details">Details</string>
    <string name="rules">Rules</string>
    <string name="add_the_rules_for_the_place">Add the rules for the place</string>
    <string name="write_your_rule">Write your rule..</string>
    <string name="benefits">Benefits</string>
    <string name="add_the_benefits_for_the_place">Add the benefits for the place</string>
    <string name="post">Post</string>
    <string name="write_your_benefit">Write your benefit..</string>
    <string name="description">Description</string>
    <string name="write_a_description_about_the_place">Write a description about the place..</string>
    <string-array name="roles">
        <item>Guest</item>
        <item>Host</item>
    </string-array>

    <string name="your_place">Your Place</string>
    <string name="place_gallery">place gallery</string>
    <string name="has_livingroom_ask">Has Livingroom:</string>
    <string name="you_don_t_have_set_your_place_yet">You don\'t have set your place yet.</string>
    <string name="create_place">Create Place</string>
    <string name="fetching_your_place">Fetching your place..</string>
    <string name="place_is_creating">Your place is being created..</string>
    <string name="the_last_images_will_be_removed_if_this_field_is_set">The last images will be removed if this field is set!</string>
    <string name="loading_place">Loading place..</string>
    <string name="seting_place">Setting place..</string>
    <string name="deleting_place_msg">Your place is being deleted..</string>
    <string name="logo">logo</string>
    <string name="type_of_place_Ask">Type of Place:</string>
    <string name="from_ask">From:</string>
    <string name="select1">select</string>
    <string name="to_ask">To:</string>
    <string name="number_of_people_ask">Number of People:</string>
    <string name="search">Search</string>
    <string name="fetching_places">Fetching places..</string>
    <string name="place_details">Place Details</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="message_to_host">Message</string>
    <string name="click_on_the_image_to_get_details_about_the_user">Click on the image to get details about the user</string>
    <string name="messages">Messages</string>
    <string name="already_stayed_here_please_rate">Already stayed here? Please rate!</string>
    <string name="rate">Rate</string>
    <string name="rate_the_place">Rate and Comment the place:</string>
    <string name="comment">Comment:</string>
    <string name="submit">SUBMIT</string>
    <string name="created_by">Created by Theodors Mandilaras (2019-20)</string>
</resources>
