<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="251dp"
        android:layout_height="260dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/compass" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/light_round"
        android:textColor="#000"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/light_round"
        android:textColor="#000"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/default_button"
        android:text="@string/login"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingStart="10dp"
            android:textColor="#fff"
            android:text="@string/not_registered"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:text="@string/register"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry" />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        android:text="@string/created_by"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>