<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/calm_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/rate_the_place"
        />
    <TextView
        android:id="@+id/textview_ratedialog_placeaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Chios"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/rating"
        />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:id="@+id/ratingbar_dialog_rate"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/comment"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_ratingdialog_comment"
        android:autofillHints="leave a comment"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        />





</LinearLayout>